# meson-python-cffi-example

./: README.md  meson.build  pyproject.toml
cffi/meson_python_cffi_example/: _fontconfig.c.py  _fontconfig.cdef.txt
src/meson_python_cffi_example/: __init__.py  fontconfig.py
