[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'cffi']

[project]
authors = [
  {name = 'Rose Davidson', email = 'rose@metaclassical.com'},
]
dependencies = ['cffi']
description = 'An example of a meson-python project which uses cffi.'
dynamic = ['version']
license = {file = 'LICENSE'}
name = 'meson-python-cffi-example'
readme = 'README.md'
requires-python = '>=3.8'

[tool.meson-python]
limited-api = true
